flexoffice-test/frontend/flex-web/flex-web-middle.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
  namespace: flex-test-web
spec:
  redirectScheme:
    scheme: https
    permanent: true
