flexoffice-test/frontend/flex-web/flex-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flex-test-web
  namespace: flex-test-web
  labels:
    app: flex-test-web
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: flex-test-web
  replicas: 1
  template:
    metadata:
      labels:
        app: flex-test-web
    spec:
      imagePullSecrets:
      - name: github-secret
      containers:
      - name: flex-test-web
        image: ghcr.io/jonastschumi/flexoffice_flex-web:p0.0.37
        imagePullPolicy: Always
        ports:
        - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
