flexoffice-test/frontend/flex-web/flex-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flex-test-web
  namespace: flex-test-web
spec:
  selector:
    app: flex-test-web
  type: ClusterIP
  ports:
    - name: http
      port: 80
