flexoffice-test/frontend/flex-web/flex-web-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flex-test-web-https
  namespace: flex-test-web
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
spec:
  rules:
  - host: "www.flex.test.tschumi.me"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flex-test-web
            port:
              number: 80
  tls:
  - hosts:
    - "www.flex.test.tschumi.me"
    secretName: flex-test-web
